--- a/LBL-Jupyter-talk.org
+++ b/LBL-Jupyter-talk.org
@@ -1,5 +1,5 @@
 #+OPTIONS: toc:nil num:nil
-#+REVEAL_ROOT: https://cdn.jsdelivr.net/reveal.js/3.0.0/
+#+REVEAL_ROOT: https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.9.2
 #+REVEAL_HLEVEL: 2
 #+REVEAL_THEME: white
 #+REVEAL_EXTRA_CSS: ./local.css
